# LGRO

./: .gitignore  BACKEND_READ.md  CLAUDE.md  DESIGN.md  PROJECT.md  PROJECT_db.md  README.md  erd.html
backend/: .gitignore  data.json  db.sqlite3  fixtures_region.json  jjambbong_list.json  mcp_exam.py  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  social_auth.py  tests.py  urls.py  views.py
backend/accounts/management/commands/: ensure_dev_superuser.py
backend/accounts/migrations/: 0001_initial.py  0002_user_unique_oauth_identity.py
backend/ai_analysis/: LangGraph.md  admin.py  admin_urls.py  admin_views.py  models.py  pipeline.py  serializers.py  views.py
backend/ai_analysis/management/commands/: run_analysis.py
backend/ai_analysis/migrations/: 0001_initial.py
backend/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/community/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/community/migrations/: 0001_initial.py  0002_question_linked_restaurant_and_more.py  0003_feedback.py
backend/config/: settings.py  urls.py
backend/restaurants/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/restaurants/management/commands/: geocode_restaurants.py  seed_sample_data.py  (+1 more)
backend/restaurants/migrations/: 0001_initial.py  0002_restaurantimage_is_approved_and_more.py
backend/reviews/: admin.py  models.py
backend/reviews/migrations/: 0001_initial.py
frontend/: index.html  (+9 more)
(+56 files in other folders)
